--- a/webapp/view/Detailed.view.xml
+++ b/webapp/view/Detailed.view.xml
@@ -4,12 +4,12 @@
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns:card="sap.f.cards"
 	xmlns:f="sap.f">
-	<f:Card>
-		<f:header>
-			<card:Header title="{contacts>name}" subtitle="Contact Information" />
-		</f:header>
-		<f:content>
-			<Panel>
+	<Carousel>
+		<f:Card>
+			<f:header>
+				<card:Header title="{contacts>name}" subtitle="Contact Information" />
+			</f:header>
+			<f:content>
 				<Panel>
 					<VBox>
 						<FlexBox alignItems="Stretch" justifyContent="End">
@@ -20,17 +20,24 @@
 						</FlexBox>
 					</VBox>
 				</Panel>
+			</f:content>
+		</f:Card>
+		<f:Card>
+			<f:header>
+				<card:Header title="{contacts>name}" subtitle="Contact Information" />
+			</f:header>
+			<f:content>
 				<Panel>
 					<VBox>
-						<FlexBox alignItems="Stretch" justifyContent="Start">
-							<Text text=""></Text><Text text="{contacts>address}"></Text>
+						<FlexBox alignItems="Stretch" justifyContent="End">
+							<Button text="Edit"></Button>
 						</FlexBox>
 						<FlexBox alignItems="Stretch" justifyContent="Start">
-							<Text text=""></Text><Text text="{contacts>address}"></Text>
+							<Text text="{contacts>name}"></Text>
 						</FlexBox>
 					</VBox>
 				</Panel>
-			</Panel>
-		</f:content>
-	</f:Card>
+			</f:content>
+		</f:Card>
+	</Carousel>
 </mvc:View>
