--- a/webapp/view/Phonebook.view.xml
+++ b/webapp/view/Phonebook.view.xml
@@ -8,29 +8,15 @@
         <Table>
             <columns>
                 <Column width="30%">
-                    <tnt:SideNavigation id="sideNavigation" selectedKey="subItem3">
-                        <tnt:NavigationList>
-                            <tnt:NavigationListItem text="Item 1" icon="sap-icon://employee">
+                    <tnt:SideNavigation id="sideNavigation" selectedKey="Province">
+                        <tnt:NavigationList id="provinceFilter">
+                            <tnt:NavigationListItem text="Province" icon="sap-icon://suitcase">
                                 <tnt:NavigationListItem text="Sub Item 1" />
-                                <tnt:NavigationListItem text="Sub Item 2" />
-                                <tnt:NavigationListItem text="Sub Item 3" id="subItem3"
-                                    key="subItem3" />
-                                <tnt:NavigationListItem text="Sub Item 4" />
                             </tnt:NavigationListItem>
-                            <tnt:NavigationListItem text="Item 2" icon="sap-icon://building">
+                            <tnt:NavigationListItem id="townFilter" text="Town" icon="sap-icon://map-fill">
                                 <tnt:NavigationListItem text="Sub Item 1" />
-                                <tnt:NavigationListItem text="Sub Item 2" />
-                                <tnt:NavigationListItem text="Sub Item 3" />
-                                <tnt:NavigationListItem text="Sub Item 4" />
                             </tnt:NavigationListItem>
                         </tnt:NavigationList>
-                        <tnt:fixedItem>
-                            <tnt:NavigationList>
-                                <tnt:NavigationListItem text="Item 1" icon="sap-icon://employee" />
-                                <tnt:NavigationListItem text="Item 2" icon="sap-icon://building" />
-                                <tnt:NavigationListItem text="Item 3" icon="sap-icon://card" />
-                            </tnt:NavigationList>
-                        </tnt:fixedItem>
                     </tnt:SideNavigation>
                 </Column>
                 <Column width="auto">
